// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CreateOptimizableMap > should create optimization map for <backgroundImage> 1`] = `
{
  "hasNegative": true,
  "prefixGroups": [
    "bg-conic",
    "bg-linear",
    "bg-linear-to",
    "from",
    "to",
    "via",
    "bg",
  ],
  "prefixValueMapping": [
    {
      "hasNegative": true,
      "prefix": "bg-conic",
      "values": [
        "$ref1",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "bg-linear",
      "values": [
        "$ref1",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "bg-linear-to",
      "values": [
        "$ref2",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "from",
      "values": [
        "$ref3",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "to",
      "values": [
        "$ref3",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "via",
      "values": [
        "$ref3",
        "none",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "bg",
      "values": [
        "$ref4",
      ],
    },
  ],
  "propertyName": "backgroundImage",
  "soleGroups": [],
  "valueGroups": [
    "0",
    "30",
    "60",
    "90",
    "120",
    "150",
    "180",
    "210",
    "240",
    "270",
    "300",
    "330",
    "conic",
    "b",
    "bl",
    "br",
    "l",
    "r",
    "t",
    "tl",
    "tr",
    "none",
    "radial",
    "0%",
    "5%",
    "10%",
    "15%",
    "20%",
    "25%",
    "30%",
    "35%",
    "40%",
    "45%",
    "50%",
    "55%",
    "60%",
    "65%",
    "70%",
    "75%",
    "80%",
    "85%",
    "90%",
    "95%",
    "100%",
    "amber-50",
    "amber-100",
    "amber-200",
    "amber-300",
    "amber-400",
    "amber-500",
    "amber-600",
    "amber-700",
    "amber-800",
    "amber-900",
    "amber-950",
    "black",
    "blue-50",
    "blue-100",
    "blue-200",
    "blue-300",
    "blue-400",
    "blue-500",
    "blue-600",
    "blue-700",
    "blue-800",
    "blue-900",
    "blue-950",
    "current",
    "cyan-50",
    "cyan-100",
    "cyan-200",
    "cyan-300",
    "cyan-400",
    "cyan-500",
    "cyan-600",
    "cyan-700",
    "cyan-800",
    "cyan-900",
    "cyan-950",
    "emerald-50",
    "emerald-100",
    "emerald-200",
    "emerald-300",
    "emerald-400",
    "emerald-500",
    "emerald-600",
    "emerald-700",
    "emerald-800",
    "emerald-900",
    "emerald-950",
    "fuchsia-50",
    "fuchsia-100",
    "fuchsia-200",
    "fuchsia-300",
    "fuchsia-400",
    "fuchsia-500",
    "fuchsia-600",
    "fuchsia-700",
    "fuchsia-800",
    "fuchsia-900",
    "fuchsia-950",
    "gray-50",
    "gray-100",
    "gray-200",
    "gray-300",
    "gray-400",
    "gray-500",
    "gray-600",
    "gray-700",
    "gray-800",
    "gray-900",
    "gray-950",
    "green-50",
    "green-100",
    "green-200",
    "green-300",
    "green-400",
    "green-500",
    "green-600",
    "green-700",
    "green-800",
    "green-900",
    "green-950",
    "indigo-50",
    "indigo-100",
    "indigo-200",
    "indigo-300",
    "indigo-400",
    "indigo-500",
    "indigo-600",
    "indigo-700",
    "indigo-800",
    "indigo-900",
    "indigo-950",
    "inherit",
    "lime-50",
    "lime-100",
    "lime-200",
    "lime-300",
    "lime-400",
    "lime-500",
    "lime-600",
    "lime-700",
    "lime-800",
    "lime-900",
    "lime-950",
    "neutral-50",
    "neutral-100",
    "neutral-200",
    "neutral-300",
    "neutral-400",
    "neutral-500",
    "neutral-600",
    "neutral-700",
    "neutral-800",
    "neutral-900",
    "neutral-950",
    "orange-50",
    "orange-100",
    "orange-200",
    "orange-300",
    "orange-400",
    "orange-500",
    "orange-600",
    "orange-700",
    "orange-800",
    "orange-900",
    "orange-950",
    "pink-50",
    "pink-100",
    "pink-200",
    "pink-300",
    "pink-400",
    "pink-500",
    "pink-600",
    "pink-700",
    "pink-800",
    "pink-900",
    "pink-950",
    "primary-50",
    "primary-100",
    "primary-200",
    "primary-300",
    "primary-400",
    "primary-500",
    "primary-600",
    "primary-700",
    "primary-800",
    "primary-900",
    "primary-dark",
    "primary-light",
    "purple-50",
    "purple-100",
    "purple-200",
    "purple-300",
    "purple-400",
    "purple-500",
    "purple-600",
    "purple-700",
    "purple-800",
    "purple-900",
    "purple-950",
    "red-50",
    "red-100",
    "red-200",
    "red-300",
    "red-400",
    "red-500",
    "red-600",
    "red-700",
    "red-800",
    "red-900",
    "red-950",
    "rose-50",
    "rose-100",
    "rose-200",
    "rose-300",
    "rose-400",
    "rose-500",
    "rose-600",
    "rose-700",
    "rose-800",
    "rose-900",
    "rose-950",
    "sky-50",
    "sky-100",
    "sky-200",
    "sky-300",
    "sky-400",
    "sky-500",
    "sky-600",
    "sky-700",
    "sky-800",
    "sky-900",
    "sky-950",
    "slate-50",
    "slate-100",
    "slate-200",
    "slate-300",
    "slate-400",
    "slate-500",
    "slate-600",
    "slate-700",
    "slate-800",
    "slate-900",
    "slate-950",
    "stone-50",
    "stone-100",
    "stone-200",
    "stone-300",
    "stone-400",
    "stone-500",
    "stone-600",
    "stone-700",
    "stone-800",
    "stone-900",
    "stone-950",
    "teal-50",
    "teal-100",
    "teal-200",
    "teal-300",
    "teal-400",
    "teal-500",
    "teal-600",
    "teal-700",
    "teal-800",
    "teal-900",
    "teal-950",
    "transparent",
    "violet-50",
    "violet-100",
    "violet-200",
    "violet-300",
    "violet-400",
    "violet-500",
    "violet-600",
    "violet-700",
    "violet-800",
    "violet-900",
    "violet-950",
    "white",
    "yellow-50",
    "yellow-100",
    "yellow-200",
    "yellow-300",
    "yellow-400",
    "yellow-500",
    "yellow-600",
    "yellow-700",
    "yellow-800",
    "yellow-900",
    "yellow-950",
    "zinc-50",
    "zinc-100",
    "zinc-200",
    "zinc-300",
    "zinc-400",
    "zinc-500",
    "zinc-600",
    "zinc-700",
    "zinc-800",
    "zinc-900",
    "zinc-950",
  ],
  "valueReferenceMap": Map {
    "$ref1" => [
      "0",
      "30",
      "60",
      "90",
      "120",
      "150",
      "180",
      "210",
      "240",
      "270",
      "300",
      "330",
    ],
    "$ref2" => [
      "b",
      "bl",
      "br",
      "l",
      "r",
      "t",
      "tl",
      "tr",
    ],
    "$ref3" => [
      "0%",
      "5%",
      "10%",
      "15%",
      "20%",
      "25%",
      "30%",
      "35%",
      "40%",
      "45%",
      "50%",
      "55%",
      "60%",
      "65%",
      "70%",
      "75%",
      "80%",
      "85%",
      "90%",
      "95%",
      "100%",
      "amber-50",
      "amber-100",
      "amber-200",
      "amber-300",
      "amber-400",
      "amber-500",
      "amber-600",
      "amber-700",
      "amber-800",
      "amber-900",
      "amber-950",
      "black",
      "blue-50",
      "blue-100",
      "blue-200",
      "blue-300",
      "blue-400",
      "blue-500",
      "blue-600",
      "blue-700",
      "blue-800",
      "blue-900",
      "blue-950",
      "current",
      "cyan-50",
      "cyan-100",
      "cyan-200",
      "cyan-300",
      "cyan-400",
      "cyan-500",
      "cyan-600",
      "cyan-700",
      "cyan-800",
      "cyan-900",
      "cyan-950",
      "emerald-50",
      "emerald-100",
      "emerald-200",
      "emerald-300",
      "emerald-400",
      "emerald-500",
      "emerald-600",
      "emerald-700",
      "emerald-800",
      "emerald-900",
      "emerald-950",
      "fuchsia-50",
      "fuchsia-100",
      "fuchsia-200",
      "fuchsia-300",
      "fuchsia-400",
      "fuchsia-500",
      "fuchsia-600",
      "fuchsia-700",
      "fuchsia-800",
      "fuchsia-900",
      "fuchsia-950",
      "gray-50",
      "gray-100",
      "gray-200",
      "gray-300",
      "gray-400",
      "gray-500",
      "gray-600",
      "gray-700",
      "gray-800",
      "gray-900",
      "gray-950",
      "green-50",
      "green-100",
      "green-200",
      "green-300",
      "green-400",
      "green-500",
      "green-600",
      "green-700",
      "green-800",
      "green-900",
      "green-950",
      "indigo-50",
      "indigo-100",
      "indigo-200",
      "indigo-300",
      "indigo-400",
      "indigo-500",
      "indigo-600",
      "indigo-700",
      "indigo-800",
      "indigo-900",
      "indigo-950",
      "inherit",
      "lime-50",
      "lime-100",
      "lime-200",
      "lime-300",
      "lime-400",
      "lime-500",
      "lime-600",
      "lime-700",
      "lime-800",
      "lime-900",
      "lime-950",
      "neutral-50",
      "neutral-100",
      "neutral-200",
      "neutral-300",
      "neutral-400",
      "neutral-500",
      "neutral-600",
      "neutral-700",
      "neutral-800",
      "neutral-900",
      "neutral-950",
      "orange-50",
      "orange-100",
      "orange-200",
      "orange-300",
      "orange-400",
      "orange-500",
      "orange-600",
      "orange-700",
      "orange-800",
      "orange-900",
      "orange-950",
      "pink-50",
      "pink-100",
      "pink-200",
      "pink-300",
      "pink-400",
      "pink-500",
      "pink-600",
      "pink-700",
      "pink-800",
      "pink-900",
      "pink-950",
      "primary-50",
      "primary-100",
      "primary-200",
      "primary-300",
      "primary-400",
      "primary-500",
      "primary-600",
      "primary-700",
      "primary-800",
      "primary-900",
      "primary-dark",
      "primary-light",
      "purple-50",
      "purple-100",
      "purple-200",
      "purple-300",
      "purple-400",
      "purple-500",
      "purple-600",
      "purple-700",
      "purple-800",
      "purple-900",
      "purple-950",
      "red-50",
      "red-100",
      "red-200",
      "red-300",
      "red-400",
      "red-500",
      "red-600",
      "red-700",
      "red-800",
      "red-900",
      "red-950",
      "rose-50",
      "rose-100",
      "rose-200",
      "rose-300",
      "rose-400",
      "rose-500",
      "rose-600",
      "rose-700",
      "rose-800",
      "rose-900",
      "rose-950",
      "sky-50",
      "sky-100",
      "sky-200",
      "sky-300",
      "sky-400",
      "sky-500",
      "sky-600",
      "sky-700",
      "sky-800",
      "sky-900",
      "sky-950",
      "slate-50",
      "slate-100",
      "slate-200",
      "slate-300",
      "slate-400",
      "slate-500",
      "slate-600",
      "slate-700",
      "slate-800",
      "slate-900",
      "slate-950",
      "stone-50",
      "stone-100",
      "stone-200",
      "stone-300",
      "stone-400",
      "stone-500",
      "stone-600",
      "stone-700",
      "stone-800",
      "stone-900",
      "stone-950",
      "teal-50",
      "teal-100",
      "teal-200",
      "teal-300",
      "teal-400",
      "teal-500",
      "teal-600",
      "teal-700",
      "teal-800",
      "teal-900",
      "teal-950",
      "transparent",
      "violet-50",
      "violet-100",
      "violet-200",
      "violet-300",
      "violet-400",
      "violet-500",
      "violet-600",
      "violet-700",
      "violet-800",
      "violet-900",
      "violet-950",
      "white",
      "yellow-50",
      "yellow-100",
      "yellow-200",
      "yellow-300",
      "yellow-400",
      "yellow-500",
      "yellow-600",
      "yellow-700",
      "yellow-800",
      "yellow-900",
      "yellow-950",
      "zinc-50",
      "zinc-100",
      "zinc-200",
      "zinc-300",
      "zinc-400",
      "zinc-500",
      "zinc-600",
      "zinc-700",
      "zinc-800",
      "zinc-900",
      "zinc-950",
    ],
    "$ref4" => [
      "conic",
      "none",
      "radial",
    ],
  },
  "variants": [
    "oklab",
    "oklch",
    "srgb",
    "hsl",
    "longer",
    "shorter",
    "increasing",
    "decreasing",
    "0",
    "5",
    "10",
    "15",
    "20",
    "25",
    "30",
    "35",
    "40",
    "45",
    "50",
    "55",
    "60",
    "65",
    "70",
    "75",
    "80",
    "85",
    "90",
    "95",
    "100",
  ],
}
`;

exports[`CreateOptimizableMap > should create optimization map for <bg-blend-mode> 1`] = `
{
  "hasNegative": false,
  "prefixGroups": [
    "bg-blend",
    "bg-blend-color",
  ],
  "prefixValueMapping": [
    {
      "hasNegative": false,
      "prefix": "bg-blend",
      "values": [
        "$ref1",
      ],
    },
    {
      "hasNegative": false,
      "prefix": "bg-blend-color",
      "values": [
        "$ref2",
      ],
    },
  ],
  "propertyName": "bg-blend-mode",
  "soleGroups": [],
  "valueGroups": [
    "color",
    "burn",
    "dodge",
    "darken",
    "difference",
    "exclusion",
    "hard-light",
    "hue",
    "lighten",
    "luminosity",
    "multiply",
    "normal",
    "overlay",
    "saturation",
    "screen",
    "soft-light",
  ],
  "valueReferenceMap": Map {
    "$ref1" => [
      "color",
      "darken",
      "difference",
      "exclusion",
      "hard-light",
      "hue",
      "lighten",
      "luminosity",
      "multiply",
      "normal",
      "overlay",
      "saturation",
      "screen",
      "soft-light",
    ],
    "$ref2" => [
      "burn",
      "dodge",
    ],
  },
  "variants": null,
}
`;

exports[`CreateOptimizableMap > should create optimization map for <bg-color> 1`] = `
{
  "hasNegative": false,
  "prefixGroups": [
    "bg",
  ],
  "prefixValueMapping": [
    {
      "hasNegative": false,
      "prefix": "bg",
      "values": [
        "$ref1",
      ],
    },
  ],
  "propertyName": "backgroundColor",
  "soleGroups": [],
  "valueGroups": [
    "amber-50",
    "amber-100",
    "amber-200",
    "amber-300",
    "amber-400",
    "amber-500",
    "amber-600",
    "amber-700",
    "amber-800",
    "amber-900",
    "amber-950",
    "black",
    "blue-50",
    "blue-100",
    "blue-200",
    "blue-300",
    "blue-400",
    "blue-500",
    "blue-600",
    "blue-700",
    "blue-800",
    "blue-900",
    "blue-950",
    "current",
    "cyan-50",
    "cyan-100",
    "cyan-200",
    "cyan-300",
    "cyan-400",
    "cyan-500",
    "cyan-600",
    "cyan-700",
    "cyan-800",
    "cyan-900",
    "cyan-950",
    "emerald-50",
    "emerald-100",
    "emerald-200",
    "emerald-300",
    "emerald-400",
    "emerald-500",
    "emerald-600",
    "emerald-700",
    "emerald-800",
    "emerald-900",
    "emerald-950",
    "fuchsia-50",
    "fuchsia-100",
    "fuchsia-200",
    "fuchsia-300",
    "fuchsia-400",
    "fuchsia-500",
    "fuchsia-600",
    "fuchsia-700",
    "fuchsia-800",
    "fuchsia-900",
    "fuchsia-950",
    "gray-50",
    "gray-100",
    "gray-200",
    "gray-300",
    "gray-400",
    "gray-500",
    "gray-600",
    "gray-700",
    "gray-800",
    "gray-900",
    "gray-950",
    "green-50",
    "green-100",
    "green-200",
    "green-300",
    "green-400",
    "green-500",
    "green-600",
    "green-700",
    "green-800",
    "green-900",
    "green-950",
    "indigo-50",
    "indigo-100",
    "indigo-200",
    "indigo-300",
    "indigo-400",
    "indigo-500",
    "indigo-600",
    "indigo-700",
    "indigo-800",
    "indigo-900",
    "indigo-950",
    "inherit",
    "lime-50",
    "lime-100",
    "lime-200",
    "lime-300",
    "lime-400",
    "lime-500",
    "lime-600",
    "lime-700",
    "lime-800",
    "lime-900",
    "lime-950",
    "neutral-50",
    "neutral-100",
    "neutral-200",
    "neutral-300",
    "neutral-400",
    "neutral-500",
    "neutral-600",
    "neutral-700",
    "neutral-800",
    "neutral-900",
    "neutral-950",
    "orange-50",
    "orange-100",
    "orange-200",
    "orange-300",
    "orange-400",
    "orange-500",
    "orange-600",
    "orange-700",
    "orange-800",
    "orange-900",
    "orange-950",
    "pink-50",
    "pink-100",
    "pink-200",
    "pink-300",
    "pink-400",
    "pink-500",
    "pink-600",
    "pink-700",
    "pink-800",
    "pink-900",
    "pink-950",
    "primary-50",
    "primary-100",
    "primary-200",
    "primary-300",
    "primary-400",
    "primary-500",
    "primary-600",
    "primary-700",
    "primary-800",
    "primary-900",
    "primary-dark",
    "primary-light",
    "purple-50",
    "purple-100",
    "purple-200",
    "purple-300",
    "purple-400",
    "purple-500",
    "purple-600",
    "purple-700",
    "purple-800",
    "purple-900",
    "purple-950",
    "red-50",
    "red-100",
    "red-200",
    "red-300",
    "red-400",
    "red-500",
    "red-600",
    "red-700",
    "red-800",
    "red-900",
    "red-950",
    "rose-50",
    "rose-100",
    "rose-200",
    "rose-300",
    "rose-400",
    "rose-500",
    "rose-600",
    "rose-700",
    "rose-800",
    "rose-900",
    "rose-950",
    "sky-50",
    "sky-100",
    "sky-200",
    "sky-300",
    "sky-400",
    "sky-500",
    "sky-600",
    "sky-700",
    "sky-800",
    "sky-900",
    "sky-950",
    "slate-50",
    "slate-100",
    "slate-200",
    "slate-300",
    "slate-400",
    "slate-500",
    "slate-600",
    "slate-700",
    "slate-800",
    "slate-900",
    "slate-950",
    "stone-50",
    "stone-100",
    "stone-200",
    "stone-300",
    "stone-400",
    "stone-500",
    "stone-600",
    "stone-700",
    "stone-800",
    "stone-900",
    "stone-950",
    "teal-50",
    "teal-100",
    "teal-200",
    "teal-300",
    "teal-400",
    "teal-500",
    "teal-600",
    "teal-700",
    "teal-800",
    "teal-900",
    "teal-950",
    "transparent",
    "violet-50",
    "violet-100",
    "violet-200",
    "violet-300",
    "violet-400",
    "violet-500",
    "violet-600",
    "violet-700",
    "violet-800",
    "violet-900",
    "violet-950",
    "white",
    "yellow-50",
    "yellow-100",
    "yellow-200",
    "yellow-300",
    "yellow-400",
    "yellow-500",
    "yellow-600",
    "yellow-700",
    "yellow-800",
    "yellow-900",
    "yellow-950",
    "zinc-50",
    "zinc-100",
    "zinc-200",
    "zinc-300",
    "zinc-400",
    "zinc-500",
    "zinc-600",
    "zinc-700",
    "zinc-800",
    "zinc-900",
    "zinc-950",
  ],
  "valueReferenceMap": Map {
    "$ref1" => [
      "amber-50",
      "amber-100",
      "amber-200",
      "amber-300",
      "amber-400",
      "amber-500",
      "amber-600",
      "amber-700",
      "amber-800",
      "amber-900",
      "amber-950",
      "black",
      "blue-50",
      "blue-100",
      "blue-200",
      "blue-300",
      "blue-400",
      "blue-500",
      "blue-600",
      "blue-700",
      "blue-800",
      "blue-900",
      "blue-950",
      "current",
      "cyan-50",
      "cyan-100",
      "cyan-200",
      "cyan-300",
      "cyan-400",
      "cyan-500",
      "cyan-600",
      "cyan-700",
      "cyan-800",
      "cyan-900",
      "cyan-950",
      "emerald-50",
      "emerald-100",
      "emerald-200",
      "emerald-300",
      "emerald-400",
      "emerald-500",
      "emerald-600",
      "emerald-700",
      "emerald-800",
      "emerald-900",
      "emerald-950",
      "fuchsia-50",
      "fuchsia-100",
      "fuchsia-200",
      "fuchsia-300",
      "fuchsia-400",
      "fuchsia-500",
      "fuchsia-600",
      "fuchsia-700",
      "fuchsia-800",
      "fuchsia-900",
      "fuchsia-950",
      "gray-50",
      "gray-100",
      "gray-200",
      "gray-300",
      "gray-400",
      "gray-500",
      "gray-600",
      "gray-700",
      "gray-800",
      "gray-900",
      "gray-950",
      "green-50",
      "green-100",
      "green-200",
      "green-300",
      "green-400",
      "green-500",
      "green-600",
      "green-700",
      "green-800",
      "green-900",
      "green-950",
      "indigo-50",
      "indigo-100",
      "indigo-200",
      "indigo-300",
      "indigo-400",
      "indigo-500",
      "indigo-600",
      "indigo-700",
      "indigo-800",
      "indigo-900",
      "indigo-950",
      "inherit",
      "lime-50",
      "lime-100",
      "lime-200",
      "lime-300",
      "lime-400",
      "lime-500",
      "lime-600",
      "lime-700",
      "lime-800",
      "lime-900",
      "lime-950",
      "neutral-50",
      "neutral-100",
      "neutral-200",
      "neutral-300",
      "neutral-400",
      "neutral-500",
      "neutral-600",
      "neutral-700",
      "neutral-800",
      "neutral-900",
      "neutral-950",
      "orange-50",
      "orange-100",
      "orange-200",
      "orange-300",
      "orange-400",
      "orange-500",
      "orange-600",
      "orange-700",
      "orange-800",
      "orange-900",
      "orange-950",
      "pink-50",
      "pink-100",
      "pink-200",
      "pink-300",
      "pink-400",
      "pink-500",
      "pink-600",
      "pink-700",
      "pink-800",
      "pink-900",
      "pink-950",
      "primary-50",
      "primary-100",
      "primary-200",
      "primary-300",
      "primary-400",
      "primary-500",
      "primary-600",
      "primary-700",
      "primary-800",
      "primary-900",
      "primary-dark",
      "primary-light",
      "purple-50",
      "purple-100",
      "purple-200",
      "purple-300",
      "purple-400",
      "purple-500",
      "purple-600",
      "purple-700",
      "purple-800",
      "purple-900",
      "purple-950",
      "red-50",
      "red-100",
      "red-200",
      "red-300",
      "red-400",
      "red-500",
      "red-600",
      "red-700",
      "red-800",
      "red-900",
      "red-950",
      "rose-50",
      "rose-100",
      "rose-200",
      "rose-300",
      "rose-400",
      "rose-500",
      "rose-600",
      "rose-700",
      "rose-800",
      "rose-900",
      "rose-950",
      "sky-50",
      "sky-100",
      "sky-200",
      "sky-300",
      "sky-400",
      "sky-500",
      "sky-600",
      "sky-700",
      "sky-800",
      "sky-900",
      "sky-950",
      "slate-50",
      "slate-100",
      "slate-200",
      "slate-300",
      "slate-400",
      "slate-500",
      "slate-600",
      "slate-700",
      "slate-800",
      "slate-900",
      "slate-950",
      "stone-50",
      "stone-100",
      "stone-200",
      "stone-300",
      "stone-400",
      "stone-500",
      "stone-600",
      "stone-700",
      "stone-800",
      "stone-900",
      "stone-950",
      "teal-50",
      "teal-100",
      "teal-200",
      "teal-300",
      "teal-400",
      "teal-500",
      "teal-600",
      "teal-700",
      "teal-800",
      "teal-900",
      "teal-950",
      "transparent",
      "violet-50",
      "violet-100",
      "violet-200",
      "violet-300",
      "violet-400",
      "violet-500",
      "violet-600",
      "violet-700",
      "violet-800",
      "violet-900",
      "violet-950",
      "white",
      "yellow-50",
      "yellow-100",
      "yellow-200",
      "yellow-300",
      "yellow-400",
      "yellow-500",
      "yellow-600",
      "yellow-700",
      "yellow-800",
      "yellow-900",
      "yellow-950",
      "zinc-50",
      "zinc-100",
      "zinc-200",
      "zinc-300",
      "zinc-400",
      "zinc-500",
      "zinc-600",
      "zinc-700",
      "zinc-800",
      "zinc-900",
      "zinc-950",
    ],
  },
  "variants": null,
}
`;

exports[`CreateOptimizableMap > should create optimization map for <display> 1`] = `
{
  "hasNegative": false,
  "prefixGroups": [
    "inline",
    "table",
  ],
  "prefixValueMapping": [
    {
      "hasNegative": false,
      "prefix": "inline",
      "values": [
        "$ref1",
      ],
    },
    {
      "hasNegative": false,
      "prefix": "table",
      "values": [
        "$ref2",
      ],
    },
  ],
  "propertyName": "display",
  "soleGroups": [
    "block",
    "contents",
    "flex",
    "flow-root",
    "grid",
    "hidden",
    "inline",
    "list-item",
    "not-sr-only",
    "sr-only",
    "table",
  ],
  "valueGroups": [
    "block",
    "contents",
    "flex",
    "flow-root",
    "grid",
    "hidden",
    "inline",
    "table",
    "list-item",
    "not-sr-only",
    "sr-only",
    "caption",
    "cell",
    "column",
    "column-group",
    "footer-group",
    "header-group",
    "row",
    "row-group",
  ],
  "valueReferenceMap": Map {
    "$ref1" => [
      "block",
      "flex",
      "grid",
      "table",
    ],
    "$ref2" => [
      "caption",
      "cell",
      "column",
      "column-group",
      "footer-group",
      "header-group",
      "row",
      "row-group",
    ],
  },
  "variants": null,
}
`;

exports[`CreateOptimizableMap > should create optimization map for <margin> 1`] = `
{
  "hasNegative": true,
  "prefixGroups": [
    "m",
    "mx",
    "my",
    "ms",
    "me",
    "mt",
    "mr",
    "mb",
    "ml",
    "space-x",
    "space-y",
  ],
  "prefixValueMapping": [
    {
      "hasNegative": true,
      "prefix": "m",
      "values": [
        "$ref1",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "mx",
      "values": [
        "$ref2",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "my",
      "values": [
        "$ref3",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "ms",
      "values": [
        "$ref4",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "me",
      "values": [
        "$ref5",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "mt",
      "values": [
        "$ref6",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "mr",
      "values": [
        "$ref7",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "mb",
      "values": [
        "$ref8",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "ml",
      "values": [
        "$ref9",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "space-x",
      "values": [
        "$ref10",
      ],
    },
    {
      "hasNegative": true,
      "prefix": "space-y",
      "values": [
        "$ref11",
      ],
    },
  ],
  "propertyName": "margin",
  "soleGroups": [],
  "valueGroups": [
    "\${string}",
    "auto",
    "px",
    "(\${string})",
    "[\${string}]",
    "reverse",
  ],
  "valueReferenceMap": Map {
    "$ref1" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref2" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref3" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref4" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref5" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref6" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref7" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref8" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref9" => [
      "\${string}",
      "auto",
      "px",
      "(\${string})",
      "[\${string}]",
    ],
    "$ref10" => [
      "\${string}",
      "px",
      "(\${string})",
      "[\${string}]",
      "reverse",
    ],
    "$ref11" => [
      "\${string}",
      "px",
      "(\${string})",
      "[\${string}]",
      "reverse",
    ],
  },
  "variants": null,
}
`;

exports[`CreateOptimizableMap > should create optimization map for <placeItems> 1`] = `
{
  "hasNegative": false,
  "prefixGroups": [
    "place-items",
  ],
  "prefixValueMapping": [
    {
      "hasNegative": false,
      "prefix": "place-items",
      "values": [
        "$ref1",
      ],
    },
  ],
  "propertyName": "placeItems",
  "soleGroups": [],
  "valueGroups": [
    "start",
    "end",
    "center",
    "baseline",
    "stretch",
  ],
  "valueReferenceMap": Map {
    "$ref1" => [
      "start",
      "end",
      "center",
      "baseline",
      "stretch",
    ],
  },
  "variants": null,
}
`;
